fix: dont allow overflow-x

--- a/src/App.css
+++ b/src/App.css
@@ -10,4 +10,5 @@
 body {
   background-color: #141414;
   color: white;
+  overflow-x: hidden;
 }
